# dtsc_330

./: README.md  SIR_model.py  pyproject.toml  spelling_correction.py  study_guide.py
dtsc330_26/readers/: grants.py
scripts/: har_classifier.py  spam_classifier.py  table_creator.py
