[project]
name = "dtsc-330"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Kearney",email = "alexk610105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numba (>=0.65.0,<0.66.0)",
    "tensorflow (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
